k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clouddental-portal
  namespace: default
  labels:
    app: clouddental-portal
spec:
  replicas: 2
  selector:
    matchLabels:
      app: clouddental-portal
  template:
    metadata:
      labels:
        app: clouddental-portal
    spec:
      imagePullSecrets:
      - name: registry-clouddental
      containers:
      - name: portal
        image: registry.digitalocean.com/clouddental/portal:v4
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "500m"
