k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: clouddental-portal-svc
  namespace: default
  labels:
    app: clouddental-portal
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: clouddental-portal
  type: ClusterIP
